Change icons8 URL

--- a/index.html
+++ b/index.html
@@ -98,6 +98,6 @@
     </div>
 </body>
 <footer>
-    Icons from <a href="http://www.google.com" >icons8.com</a>.
+    Icons from <a href="https://icons8.com/">icons8.com</a>.
 </footer>
 </html>
