Change layout Reorganize icons Add new icons Add new spaces Add new appliances Put back footer

--- a/index.html
+++ b/index.html
@@ -10,15 +10,200 @@
 
 <body>
     <div id="wrapper">
-        <div class="area">
+        <div class="area" id="entrance-space">
             <div class="area-title">
-                <img src="icons/icons8-bathroom-100.png" alt="">
-                <h1>Pièce n°1</h1>
+                <h1>Entrance space</h1>
+                <img src="icons/entrance/icons8-open-door-100.png" alt="">
             </div>
             <div class="appliance">
                 <div class="appliance-title">
                     <img src="icons/icons8-light-100.png" alt="">
-                    <h2>Appareil n°1</h2>
+                    <h2>Ceiling light</h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-on">On</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/entrance/icons8-trainers-100.png" alt="">
+                    <h2>Shoes dryer</h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-mode1">Dry</button>
+                    <button class="appliance-btn appliance-mode2">Mode2</button>
+                </div>
+            </div>
+        </div>
+        <div class="area" id="kitchen-space">
+            <div class="area-title">
+                <h1>Kitchen space</h1>
+                <img src="icons/kitchen/icons8-fridge-100.png" alt="">
+                <img src="icons/kitchen/icons8-cooker-100.png" alt="">
+                <img src="icons/kitchen/icons8-cutting-board-100.png" alt="">
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/icons8-light-100.png" alt="">
+                    <h2>Ceiling light</h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-on">On</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/icons8-ceiling-fan-100.png" alt="">
+                    <h2>Cooking fan</h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-on">On</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/kitchen/icons8-toaster-100.png" alt="">
+                    <h2>Toaster</h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-mode1">Toast</button>
+                    <button class="appliance-btn appliance-mode2">Pizza</button>
+                    <button class="appliance-btn appliance-mode3">Reheat bread</button>
+                    <button class="appliance-btn appliance-mode4">Cook</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/kitchen/icons8-kettle-100.png" alt="">
+                    <h2>Electric kettle </h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-on">On</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/kitchen/icons8-blender-100.png" alt="">
+                    <h2>Blender </h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-mode1">Low</button>
+                    <button class="appliance-btn appliance-mode2">Mid</button>
+                    <button class="appliance-btn appliance-mode3">High</button>
+                    <button class="appliance-btn appliance-mode4">Food puree</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/kitchen/icons8-kitchen-100.png" alt="">
+                    <h2>Rice cooker </h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-mode1">Mode1</button>
+                    <button class="appliance-btn appliance-mode2">Mode2</button>
+                    <button class="appliance-btn appliance-mode3">Mode3</button>
+                    <button class="appliance-btn appliance-mode4">Mode4</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/kitchen/icons8-bread-100.png" alt="">
+                    <h2>Bread machine </h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-mode1">Mode1</button>
+                    <button class="appliance-btn appliance-mode2">Mode2</button>
+                    <button class="appliance-btn appliance-mode3">Mode3</button>
+                    <button class="appliance-btn appliance-mode4">Mode4</button>
+                </div>
+            </div>
+        </div>
+        <div class="area" id="bath-and-laundry">
+            <div class="area-title">
+                <h1>Bath and Laundry space</h1>
+                <img src="icons/bath/icons8-bathroom-100.png" alt="">
+                <img src="icons/bath/icons8-washing-machine-100.png" alt="">
+                <img src="icons/bath/icons8-toilet-100.png" alt="">
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/bath/icons8-boiler-100.png" alt="">
+                    <h2>Water boiler</h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-on">On</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/icons8-light-100.png" alt="">
+                    <h2>Bathroom light</h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-on">On</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/bath/icons8-bath-fan-100.png" alt="">
+                    <h2>Bathroom fan</h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-mode1">Mode1</button>
+                    <button class="appliance-btn appliance-mode2">Mode2</button>
+                    <button class="appliance-btn appliance-mode3">Mode3</button>
+                    <button class="appliance-btn appliance-mode4">Mode4</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/icons8-light-100.png" alt="">
+                    <h2>Ceiling light</h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-on">On</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/icons8-ceiling-fan-100.png" alt="">
+                    <h2>Room fan</h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-on">On</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/bath/icons8-hair-dryer-100.png" alt="">
+                    <h2>Hair dryer</h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-mode1">Mode1</button>
+                    <button class="appliance-btn appliance-mode2">Mode2</button>
+                    <button class="appliance-btn appliance-mode3">Mode3</button>
+                    <button class="appliance-btn appliance-mode4">Mode4</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/bath/icons8-trimmer-100.png" alt="">
+                    <h2>Trimmer</h2>
                 </div>
                 <div class="appliance-controls">
                     <button class="appliance-btn appliance-off">Off</button>
@@ -26,25 +211,30 @@
                 </div>
             </div>
         </div>
-        <div class="area">
+        <div class="area" id="living-space">
             <div class="area-title">
-                <img src="icons/icons8-sofa-100.png" alt="">
-                <h1>Pièce n°2</h1>
+                <h1>Living space</h1>
+                <img src="icons/living/icons8-workspace-100.png" alt="">
+                <img src="icons/living/icons8-tableware-100.png" alt="">
+                <img src="icons/living/icons8-dumbbell-100.png" alt="">
+                <img src="icons/living/icons8-sofa-100.png" alt="">
+                <img src="icons/living/icons8-youtube-logo-100.png" alt="">
             </div>
             <div class="appliance">
                 <div class="appliance-title">
-                    <img src="icons/icons8-tv-100.png" alt="">
-                    <h2>Appareil n°1</h2>
+                    <img src="icons/living/icons8-monitor-100.png" alt="">
+                    <h2>External monitor</h2>
                 </div>
                 <div class="appliance-controls">
                     <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-idle">Idle</button>
                     <button class="appliance-btn appliance-on">On</button>
                 </div>
             </div>
             <div class="appliance">
                 <div class="appliance-title">
-                    <img src="icons/icons8-light-100.png" alt="">
-                    <h2>Appareil n°2</h2>
+                    <img src="icons/living/icons8-light-dimmer-100.png" alt="">
+                    <h2>Ceiling light</h2>
                 </div>
                 <div class="appliance-controls">
                     <button class="appliance-btn appliance-off">Off</button>
@@ -54,8 +244,43 @@
             </div>
             <div class="appliance">
                 <div class="appliance-title">
-                    <img src="icons/icons8-lamp-100.png" alt="">
-                    <h2>Appareil n°3</h2>
+                    <img src="icons/living/icons8-lamp-100.png" alt="">
+                    <h2>Desk lamp</h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-on">On</button>
+                    <input type="range" min="0" max="100" step="10">
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/living/icons8-laptop-100.png" alt="">
+                    <h2>Personal laptop</h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-plugged">Charging</button>
+                    <button class="appliance-btn appliance-idle">Idle</button>
+                    <button class="appliance-btn appliance-on">On</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/living/icons8-laptop-100.png" alt="">
+                    <h2>Office laptop</h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-plugged">Charging</button>
+                    <button class="appliance-btn appliance-idle">Idle</button>
+                    <button class="appliance-btn appliance-on">On</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/living/icons8-usb-2-100.png" alt="">
+                    <h2>Charging device</h2>
                 </div>
                 <div class="appliance-controls">
                     <button class="appliance-btn appliance-off">Off</button>
@@ -63,15 +288,17 @@
                 </div>
             </div>
         </div>
-        <div class="area">
+        <div class="area" id="sleeping-space">
             <div class="area-title">
-                <img src="icons/icons8-bed-100.png" alt="">
-                <h1>Pièce n°3</h1>
+                <h1>Sleeping space</h1>
+                <img src="icons/sleep/icons8-bed-100.png" alt="">
+                <img src="icons/sleep/icons8-closet-100.png" alt="">
+                <img src="icons/sleep/icons8-hanger-100.png" alt="">
             </div>
             <div class="appliance">
                 <div class="appliance-title">
                     <img src="icons/icons8-light-100.png" alt="">
-                    <h2>Appareil n°1</h2>
+                    <h2>Ceiling light</h2>
                 </div>
                 <div class="appliance-controls">
                     <button class="appliance-btn appliance-off">Off</button>
@@ -80,8 +307,20 @@
             </div>
             <div class="appliance">
                 <div class="appliance-title">
-                    <img src="icons/icons8-lamp-100.png" alt="">
-                    <h2>Appareil n°2</h2>
+                    <img src="icons/sleep/icons8-fan-100.png" alt="">
+                    <h2>Portable fan</h2>
+                </div>
+                <div class="appliance-controls">
+                    <button class="appliance-btn appliance-off">Off</button>
+                    <button class="appliance-btn appliance-mode1">Low</button>
+                    <button class="appliance-btn appliance-mode2">Mid</button>
+                    <button class="appliance-btn appliance-mode3">High</button>
+                </div>
+            </div>
+            <div class="appliance">
+                <div class="appliance-title">
+                    <img src="icons/sleep/icons8-broom-100.png" alt="">
+                    <h2>Vacuum</h2>
                 </div>
                 <div class="appliance-controls">
                     <button class="appliance-btn appliance-off">Off</button>
@@ -91,5 +330,9 @@
         </div>
     </div>
 </body>
+
+<footer>
+    Icons from <a href="https://icons8.com/">icons8.com</a>.
+</footer>
 
 </html>
