Add style for footer.

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             </div>
         </div>
     </div>
-    <footer>
+    <footer class="page-footer">
         Icons from <a href="https://icons8.com/">icons8.com</a>.
     </footer>
 </body>
