--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <h2>Ceiling light</h2>
                 </div>
                 <div class="appliance-controls">
-                    <button class="appliance-btn appliance-off">Off</button>
-                    <button class="appliance-btn appliance-on">On</button>
+                    <button class="appliance-btn appliance-off" data-url="https://www.example.com">Off</button>
+                    <button class="appliance-btn appliance-on" data-url="https://www.google.com">On</button>
                 </div>
             </div>
             <div class="appliance">
@@ -332,6 +332,7 @@
     <footer class="page-footer">
         Icons from <a href="https://icons8.com/">icons8.com</a>.
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
