Modify shoes dryer second status and remove button on when there are sliders

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="appliance-controls">
                     <button class="appliance-btn appliance-off">Off</button>
                     <button class="appliance-btn appliance-mode1">Dry</button>
-                    <button class="appliance-btn appliance-mode2">Mode2</button>
+                    <button class="appliance-btn appliance-mode2">Odour</button>
                 </div>
             </div>
         </div>
@@ -238,8 +238,7 @@
                 </div>
                 <div class="appliance-controls">
                     <button class="appliance-btn appliance-off">Off</button>
-                    <button class="appliance-btn appliance-on">On</button>
-                    <input type="range" min="0" max="100" step="10">
+                    <input type="range" min="10" max="100" step="10">
                 </div>
             </div>
             <div class="appliance">
@@ -249,8 +248,7 @@
                 </div>
                 <div class="appliance-controls">
                     <button class="appliance-btn appliance-off">Off</button>
-                    <button class="appliance-btn appliance-on">On</button>
-                    <input type="range" min="0" max="100" step="10">
+                    <input type="range" min="10" max="100" step="10">
                 </div>
             </div>
             <div class="appliance">
