Try to visually add the step to the slider bar, but with the current css it is not showing. Need to further investigate this.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 
 <body>
+    <datalist id="slider-markers">
+        <option>10</option>
+        <option>20</option>
+        <option>30</option>
+        <option>40</option>
+        <option>50</option>
+        <option>60</option>
+        <option>70</option>
+        <option>80</option>
+        <option>90</option>
+        <option>100</option>
+    </datalist>
     <div id="wrapper">
         <div class="area" id="entrance-space">
             <div class="area-title">
@@ -238,7 +250,7 @@
                 </div>
                 <div class="appliance-controls">
                     <button class="appliance-btn appliance-off">Off</button>
-                    <input type="range" min="10" max="100" step="10">
+                    <input type="range" min="10" max="100" step="10" >
                 </div>
             </div>
             <div class="appliance">
@@ -248,7 +260,7 @@
                 </div>
                 <div class="appliance-controls">
                     <button class="appliance-btn appliance-off">Off</button>
-                    <input type="range" min="10" max="100" step="10">
+                    <input type="range" min="10" max="100" step="10" list="slider-markers">
                 </div>
             </div>
             <div class="appliance">
