--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div class="appliance">
                 <div class="appliance-title">
-                    <img src="icons/kitchen/icons8-blender-100.png" alt="">
+                    <img src="icons/blender.png" alt="">
                     <h2>Blender </h2>
                 </div>
                 <div class="appliance-controls">
